force-app/main/default/objects/LT_Delivery_Attempt__c/LT_Delivery_Attempt__c.object-meta.xml
<CustomObject>
    <description>Tentativa de Entrega - LogiTrack Operations 360.</description>
    <label>Tentativa de Entrega</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Codigo da Tentativa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tentativas de Entrega</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>