force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Attempt_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LT_Attempt_DateTime__c</fullName>
    <description>Momento da tentativa.</description>
    <label>Data/Hora da Tentativa</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>