force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>LT_Attempt_Number__c</fullName>
    <description>Sequencial da tentativa para a remessa.</description>
    <label>Numero da Tentativa</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>