force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista que realizou a tentativa.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Tentativas de Entrega</relationshipLabel>
    <relationshipName>LT_Delivery_Attempts</relationshipName>
    <type>Lookup</type>
</CustomField>