force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>LT_Geolocation__c</fullName>
    <description>Coordenadas registradas no momento da tentativa.</description>
    <label>Geolocalizacao</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>