force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Is_Success__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Success__c</fullName>
    <description>Verdadeiro quando a tentativa resultou em entrega.</description>
    <label>Entrega Concluida</label>
    <formula>ISPICKVAL(LT_Result__c, "Entregue")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>