force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Photo_Link__c.field-meta.xml
<CustomField>
    <fullName>LT_Photo_Link__c</fullName>
    <description>Link para a foto do comprovante de entrega.</description>
    <label>Link da Foto</label>
    <type>Url</type>
</CustomField>