force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Recipient_Doc__c.field-meta.xml
<CustomField>
    <fullName>LT_Recipient_Doc__c</fullName>
    <description>Documento de quem recebeu (entregas concluidas).</description>
    <label>Documento do Recebedor</label>
    <type>Text</type>
    <length>30</length>
</CustomField>