force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Recipient_Relationship__c.field-meta.xml
<CustomField>
    <fullName>LT_Recipient_Relationship__c</fullName>
    <description>Relacao de quem recebeu com o destinatario.</description>
    <label>Relacao do Recebedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprio</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Porteiro</fullName>
            </value>
            <value>
                <fullName>Vizinho</fullName>
            </value>
            <value>
                <fullName>Funcionario</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>