force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Result__c.field-meta.xml
<CustomField>
    <fullName>LT_Result__c</fullName>
    <description>Resultado da tentativa de entrega.</description>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Destinatario Ausente</fullName>
            </value>
            <value>
                <fullName>Endereco Nao Localizado</fullName>
            </value>
            <value>
                <fullName>Recusado pelo Destinatario</fullName>
            </value>
            <value>
                <fullName>Avaria Identificada</fullName>
            </value>
            <value>
                <fullName>Area de Risco</fullName>
            </value>
            <value>
                <fullName>Estabelecimento Fechado</fullName>
            </value>
            <value>
                <fullName>Cliente Remarcou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>