force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Route__c.field-meta.xml
<CustomField>
    <fullName>LT_Route__c</fullName>
    <description>Rota em que a tentativa foi realizada.</description>
    <label>Rota</label>
    <referenceTo>LT_Route__c</referenceTo>
    <relationshipLabel>Tentativas de Entrega</relationshipLabel>
    <relationshipName>LT_Delivery_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>