force-app/main/default/objects/LT_Delivery_Attempt__c/fields/LT_Shipment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment__c</fullName>
    <description>Remessa alvo da tentativa de entrega.</description>
    <label>Remessa</label>
    <referenceTo>LT_Shipment__c</referenceTo>
    <relationshipLabel>Tentativas de Entrega</relationshipLabel>
    <relationshipName>LT_Delivery_Attempts</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>