force-app/main/default/objects/LT_Delivery_Attempt__c/validationRules/LT_Attempt_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Attempt_Not_Future</fullName>
    <active>true</active>
    <description>A tentativa nao pode ter data futura.</description>
    <errorConditionFormula>LT_Attempt_DateTime__c &gt; NOW() + 0.0417</errorConditionFormula>
    <errorDisplayField>LT_Attempt_DateTime__c</errorDisplayField>
    <errorMessage>A Data/Hora da Tentativa nao pode estar no futuro.</errorMessage>
</ValidationRule>