force-app/main/default/objects/LT_Delivery_Attempt__c/validationRules/LT_Attempt_Number_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Attempt_Number_Positive</fullName>
    <active>true</active>
    <description>O numero da tentativa deve ser maior que zero.</description>
    <errorConditionFormula>LT_Attempt_Number__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>LT_Attempt_Number__c</errorDisplayField>
    <errorMessage>Informe um Numero da Tentativa maior que zero.</errorMessage>
</ValidationRule>