force-app/main/default/objects/LT_Delivery_Attempt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Route__c</columns>
    <columns>LT_Result__c</columns>
    <columns>LT_Attempt_DateTime__c</columns>
    <columns>LT_Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>